hw2: 7 pts
